--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Whittington Wings</h1>
     <p class="tagline">Coming This Fall 🔥</p>
     <p class="subtitle">Currently Under Construction</p>
-    <img src="chicken.png" alt="Chicken mascot" class="mascot"/>
+    <img src="WhittingtonWingsLogo.png" alt="Whittington Wings Logo" class="mascot" />
   </div>
 </body>
 </html>
