--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Whittington Wings</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <script type="module" src="main.js" defer></script>
 </head>
 <body>
   <div class="container">
     <img src="WhittingtonWingsLogo.png" alt="Whittington Wings Logo" class="logo" />
-    <section class="section" id="next-wing-night">
+
+    <section class="card">
       <h2>Next Wing Night 🍗</h2>
-      <p><strong>Date:</strong> <span id="wingNightDate">Loading...</span></p>
-      <p><strong>Location:</strong> <span id="wingNightLocation">Loading...</span></p>
+      <p><strong>Date:</strong> <span id="date">Loading...</span></p>
+      <p><strong>Location:</strong> <span id="location">Loading...</span></p>
+    </section>
+
+    <section class="card">
+      <h2>Leaderboard 🏆</h2>
+      <ul id="leaderboard-list"></ul>
     </section>
   </div>
 </body>
