--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
       <h2>Leaderboard 🏆</h2>
       <ul id="leaderboard-list"></ul>
     </section>
+
+    <section class="card">
+      <h2>The Wing Commandments 🍗</h2>
+      <div class="collapsible">
+        <div id="commandments-preview">
+          <p>Once a month, the Wing Disciples gather. Each contender brings their own wings — marinated, seasoned, or sauced in secrecy.</p>
+          <p>The host provides the grill, the drinks, and the arena. One by one, each contender takes their turn at the grill, cooking their wings to crispy, saucy perfection.</p>
+          <button id="toggle-commandments">Read More</button>
+        </div>
+        <div id="commandments-full" style="display: none;">
+          <p>Wings are served in rounds — hot off the grill — and sampled by all.</p>
+          <p>When the final bite is eaten, the voting begins. Everyone gets one vote (and no, you can’t vote for yourself).</p>
+          <p>The contender with the most votes claims the win. No cash. No trophy. Just pride, trash talk rights, and a place on the leaderboard.</p>
+          <p>Victory isn’t given — it’s earned.</p>
+          <button id="toggle-less">Show Less</button>
+        </div>
+      </div>
+    </section>
+    
   </div>
 </body>
 </html>
