--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Whittington Wings Logo" class="logo" />
+    <img src="WhittingtonWingslogo.png" alt="Whittington Wings Logo" class="logo" />
 
     <!-- Next Wing Night -->
     <div class="card">
