--- a/index.html
+++ b/index.html
@@ -26,10 +26,23 @@
     </div>
 
     <!-- Wing Commandments -->
-    <div class="card">
+    <div class="section">
       <h2>🍗 The Wing Commandments 🍗</h2>
-      <p id="commandmentsText">Loading...</p>
-      <button id="readMoreBtn">Read More</button>
+      <div id="wingCommandmentsText" class="wing-text">
+        <div id="collapsedWingText">
+          <p>Once a month, the Wing contenders gather. Each contender brings their own wings — marinated, seasoned, or sauced in secrecy.</p>
+          <p>The host provides the grill, the drinks, and the arena. One by one, each contender takes their turn at the grill...</p>
+        </div>
+        <div id="fullWingText" style="display: none;">
+          <p>Once a month, the Wing contenders gather. Each contender brings their own wings — marinated, seasoned, or sauced in secrecy.</p>
+          <p>The host provides the grill, the drinks, and the arena. One by one, each contender takes their turn at the grill, cooking their wings to crispy, saucy perfection.</p>
+          <p>Wings are served in rounds — hot off the grill — and sampled by all.</p>
+          <p>When the final bite is eaten, the voting begins. Everyone gets one vote (and no, you can’t vote for yourself).</p>
+          <p>The contender with the most votes claims the win. No cash. No trophy. Just pride, trash talk rights, and a place on the leaderboard.</p>
+          <p>Victory isn’t given — it’s earned.</p>
+        </div>
+      </div>
+      <button id="toggleCommandments" class="toggle-btn">Read More</button>
     </div>
 
     <!-- Chat Section -->
