--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Wing Commandments -->
-    <div class="section">
+    <div class="section card">
       <h2>🍗 The Wing Commandments 🍗</h2>
       <div id="wingCommandmentsText" class="wing-text">
         <div id="collapsedWingText">
@@ -42,7 +42,7 @@
           <p>Victory isn’t given — it’s earned.</p>
         </div>
       </div>
-      <button id="toggleCommandments" class="toggle-btn">Read More</button>
+      <button id="toggleCommandments" class="modern-btn">Read More</button>
     </div>
 
     <!-- Chat Section -->
