--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
       <button id="toggleCommandments" class="modern-btn">Read More</button>
     </div>
 
+    <div class="section">
+      <div id="authSection">
+        <button id="signInBtn">Sign In with Google</button>
+        <button id="signOutBtn" style="display: none;">Sign Out</button>
+        <p id="userDisplay" style="margin-top: 10px;"></p>
+      </div>
+    </div>
+    
     <!-- Chat Section -->
     <div class="card">
       <h2>Wing Talk 🗣️</h2>
