--- a/index.html
+++ b/index.html
@@ -72,11 +72,9 @@
 
       <!-- Chat Input -->
       <div class="chat-input-container">
-        <input type="text" id="messageInput" placeholder="Type your message..." disabled />
-        <button id="sendMessage" class="modern-btn" disabled>Send</button>
+        <input type="text" id="messageInput" placeholder="Type your message..." />
+        <button id="sendMessage" class="modern-btn">Send</button>
       </div>
-    </div>
-  </div>
 
   <!-- Main Script -->
   <script src="main.js"></script>
