--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       </div>
 
   <!-- Main Script -->
-  <script src="main.js"></script>
+      <script src="firebase.js"></script>
+      <script src="main.js"></script>
 </body>
 </html>
