--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h2>Next Wing Night 🍗</h2>
       <p><strong>Date:</strong> <span id="wingDate">Loading...</span></p>
       <p><strong>Location:</strong> <span id="wingLocation">Loading...</span></p>
+      <p><strong>Theme:</strong> <span id="wingTheme">Loading...</span></p>
     </div>
 
     <!-- Leaderboard -->
@@ -50,7 +51,7 @@
 
     <!-- Wing Talk / Chat Section -->
     <div class="card chat-container">
-      <h2>Wing Talk 🗣️</h2>
+      <h2>Wing Chat 🗣️</h2>
 
       <!-- Auth Controls -->
       <div id="authSection">
